Issue 301 - Increase contrast between P1 and P2 labels

--- a/src/content/components/PriorityGuide/PriorityGuide.module.scss
+++ b/src/content/components/PriorityGuide/PriorityGuide.module.scss
@@ -37,17 +37,17 @@
 }
 
 .p1 {
-  background: #45a1ff;
+  background: #45A1FF;
   border-color: transparent;
   color: white;
 }
 .p2 {
-  background: #9fc6ee;
+  background: #9FC6EE;
   border-color: transparent;
   color: white;
 }
 .p3 {
-  color: #45a1ff;
+  color: #45A1FF;
   background: transparent;
 }
 .p4, .p5 {
